# Analisador-Lexico

./: .gitignore  CMakeLists.txt  Escrita.cpp  Escrita.h  LEIA.txt  Leitura.cpp  Leitura.h  README.md  Separador.cpp  Separador.h  analise_lexica.txt  cmp2.cpp  entrada.txt  palavras que devem ser aceitas.txt  reconhecimento_lexico.txt
